<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnGraj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wczytaj"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="30sp"
        android:text="@string/NewGame" />

    <Button
        android:id="@+id/wczytaj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/zamknij"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="30sp"
        android:text="@string/LoadGame" />

    <Button
        android:id="@+id/zamknij"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="150dp"
        android:onClick="quitApp"
        android:text="@string/CloseApp"
        android:textSize="30sp" />

</RelativeLayout>