<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PiecKart">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/FirstPlayersRow"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ElementOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/HighlightPlayer"
            android:elevation="5dp"
            android:hapticFeedbackEnabled="false"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/ElementTwo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/PlayerOneName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gracz_jeden"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PlayerOneInGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/w_grze"
                    android:textColor="#58A300" />

                <TextView
                    android:id="@+id/PlayerOneInBank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/w_banku"
                    android:textColor="#3F5DCA" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ElementTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/ElementThree"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ElementOne">

            <TextView
                android:id="@+id/PlayerTwoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gracz_dwa"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PlayerTwoInGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/w_grze"
                    android:textColor="#58A300" />

                <TextView
                    android:id="@+id/PlayerTwoInBank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/w_banku"
                    android:textColor="#3F5DCA" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ElementThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/ElementFour"
            app:layout_constraintTop_toBottomOf="@id/ElementTwo"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/PlayerThreeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gracz_trzy"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PlayerThreeInGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/w_grze"
                    android:textColor="#58A300" />

                <TextView
                    android:id="@+id/PlayerThreeInBank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/w_banku"
                    android:textColor="#3F5DCA" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ElementFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ElementThree"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/PlayerFourName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gracz_cztery"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PlayerFourInGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/w_grze"
                    android:textColor="#58A300" />

                <TextView
                    android:id="@+id/PlayerFourInBank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/w_banku"
                    android:textColor="#3F5DCA" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/SecondPlayersRow"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/FirstPlayersRow"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/ElementFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/PlayerFiveName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gracz_pi"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PlayerFiveInGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/w_grze"
                    android:textColor="#58A300" />

                <TextView
                    android:id="@+id/PlayerFiveInBank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/w_banku"
                    android:textColor="#3F5DCA" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ElementSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/PlayerSixName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gracz_sze"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PlayerSixInGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/w_grze"
                    android:textColor="#58A300" />

                <TextView
                    android:id="@+id/PlayerSixInBank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/w_banku"
                    android:textColor="#3F5DCA" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ElementSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/PlayerSevenName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gracz_siedem"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PlayerSevenInGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/w_grze"
                    android:textColor="#58A300" />

                <TextView
                    android:id="@+id/PlayerSevenInBank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/w_banku"
                    android:textColor="#3F5DCA" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ElementEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/PlayerEightName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gracz_osiem"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PlayerEightInGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/w_grze"
                    android:textColor="#58A300" />

                <TextView
                    android:id="@+id/PlayerEightInBank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/w_banku"
                    android:textColor="#3F5DCA" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/BtnPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BtnNext"
        app:layout_constraintStart_toEndOf="@+id/SecondPlayersRow" />

    <Button
        android:id="@+id/BtnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BtnPrevious" />

    <TextView
        android:id="@+id/HintText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-50dp"
        android:layout_marginEnd="-50dp"
        android:text="@string/FiveCardStartingText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/BtnNext"
        app:layout_constraintEnd_toEndOf="@+id/BtnNext"
        app:layout_constraintStart_toStartOf="@+id/BtnPrevious"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>